# datasette-updated

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
datasette_updated/: __init__.py
datasette_updated/templates/: _footer.html
tests/: test_updated.py
tests/plugins/datasette-updated/: metadata.json
